fix: adding z-index

--- a/src/components/Store/ChatLink/ChatLink.module.sass
+++ b/src/components/Store/ChatLink/ChatLink.module.sass
@@ -9,3 +9,4 @@
   color: $text-color
   text-decoration: none
   font-size: 1.5rem
+  z-index: 4
